# disksight

./: .gitignore  .prettierignore  LICENSE  README.md  disk_analyser_tauri_app_90aba58b.plan.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: disk-analyser.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  scanner.rs
src/components/: Breadcrumb.tsx  ConfirmDialog.tsx  SizeBar.tsx  TopFiles.tsx  TreeTable.tsx  TreemapChart.tsx
src/hooks/: useScanner.ts
src/utils/: format.ts
