[package]
name = "file_analyser"
version = "0.1.0"
description = "Disk analyser"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "file_analyser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
trash = "5"
